--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -19,3 +19,7 @@
 4. [Learn Jquery](https://learn.jquery.com/ "Learn Jquery")
 5. [IIFE](http://benalman.com/news/2010/11/immediately-invoked-function-expression/ "IIFE")
 6. [gruntjs](https://gruntjs.com/creating-tasks "gruntjs")
+
+# 20170927
+1. [JSONP]('https://tonghuashuo.github.io/blog/jsonp.html' 'JSONP')
+2. [socket]('https://socket.io/' 'socketio')
