今日笔记 and Closures in JavaScript 的草案

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -21,5 +21,21 @@
 6. [gruntjs](https://gruntjs.com/creating-tasks "gruntjs")
 
 # 20170927
-1. [JSONP]('https://tonghuashuo.github.io/blog/jsonp.html' 'JSONP')
+1. [JSONP]('https://tonghuashuo.github.io/blog/jsonp.html' 'JSONP') *重点*
 2. [socket]('https://socket.io/' 'socketio')
+
+# 20170928
+1. [sublime]('http://docs.sublimetext.info/en/latest/' "sublime text Manual")
+2. [jshint]("http://jshint.com/about/" 'jshint') 
+3. [Understand JavaScript Callback Functions and Use Them]("http://javascriptissexy.com/understand-javascript-callback-functions-and-use-them/" "http://javascriptissexy.com/understand-javascript-callback-functions-and-use-them/")
+4. ECMASritpt6中 Asynchronous JavaScript and XML与FETCH API ,WebSocket 5
+5. 今日设计模式--JavaScript Module 设计模式 跟literal模式（字面量模式）
+6. ["JavaScript Event"]("https://developer.mozilla.org/en-US/docs/Web/API/EventListener")
+7. 注意三个名词：Closure Function， CallBack Function， Anonymous Function
+    - A closure is the combination of a function and the lexical environment within which that function was declared.(闭包就是由函数以及函数声明内部的词法环境构成)
+    - ['Closures work'] ("https://stackoverflow.com/questions/111102/how-do-javascript-closures-work")
+    -  lexical scoping, which describes how a parser resolves variable names when functions are nested. (词法作用域，指的是javascript的解析器在嵌套函数存在的情况下如何解析变量)
+    The word "lexical" refers to the fact that lexical scoping uses the location where a variable is declared within the source code to determine where that variable is available.（词的意思是指词的作用域是在在决定变量在哪里有效变量被声明的地方）
+    -The reason is that functions in JavaScript form closures. A closure is the combination of a function and the lexical environment within which that function was declared.  
+    This environment consists of any local variables that were in-scope at the time the closure was created.
+8. [HHVM]("https://github.com/facebook/hhvm" "HHVM")
