--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -39,3 +39,7 @@
     -The reason is that functions in JavaScript form closures. A closure is the combination of a function and the lexical environment within which that function was declared.  
     This environment consists of any local variables that were in-scope at the time the closure was created.
 8. [HHVM]("https://github.com/facebook/hhvm" "HHVM")
+
+# 20170929
+1. [贝利卡墨菲]("http://rmurphey.com" "JavaScript")
+2. 
