add notes in today

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -42,4 +42,8 @@
 
 # 20170929
 1. [贝利卡墨菲]("http://rmurphey.com" "JavaScript")
-2. 
+
+
+# 20170930
+1. [JSON isn't a javascript sbuset](http://timelessrepo.com/json-isnt-a-javascript-subset "JSON isn't a javascript sbuset")
+2. [JSON](http://json.org/ "JSON")
