--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -47,3 +47,4 @@
 # 20170930
 1. [JSON isn't a javascript sbuset](http://timelessrepo.com/json-isnt-a-javascript-subset "JSON isn't a javascript sbuset")
 2. [JSON](http://json.org/ "JSON")
+3. [netdata](https://my-netdata.io/ "自动监控工具")
