--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -52,3 +52,10 @@
 
 #20171009 
 
+
+#20171010
+1. [PHP爬虫手册](https://doc.querylist.cc/site/index/doc/23 "手册")
+2. [QueryList爬虫仓库](https://github.com/jae-jae/QueryList "项目仓库")
+3. [Guzzle中文文档](https://github.com/guzzle "Guzzle是一个HTTP客户端工具，用来发送与使用响应请求")
+4. [Promise-spec](https://promisesaplus.com/ "An open standard for sound, interoperable JavaScript promises—by implementers, for implementers.")
+
