--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -59,4 +59,5 @@
 3. [Guzzle中文文档](https://github.com/guzzle "Guzzle是一个HTTP客户端工具，用来发送与使用响应请求")
 4. [Promise-spec](https://promisesaplus.com/ "An open standard for sound, interoperable JavaScript promises—by implementers, for implementers.")
 5. [PHP爬虫](https://github.com/FriendsOfPHP/Goutte "一个比较好的PHP爬虫")
+6. [Selector](https://www.w3.org/TR/2005/WD-css3-selectors-20051215/ "css选择器")
 
