--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -61,3 +61,8 @@
 5. [PHP爬虫](https://github.com/FriendsOfPHP/Goutte "一个比较好的PHP爬虫")
 6. [Selector](https://www.w3.org/TR/2005/WD-css3-selectors-20051215/ "css选择器")
 
+#20171011
+1. [Fetching_data](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Fetching_data "JS从后台取数据")
+2. [WebAPI](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Introduction "web API简介")
+3. [评论系统](https://blog.shuiba.co/comment-systems-recommendation "第三方评论系统")
+
