--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -66,3 +66,8 @@
 2. [WebAPI](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Introduction "web API简介")
 3. [评论系统](https://blog.shuiba.co/comment-systems-recommendation "第三方评论系统")
 
+#20171012
+1. [pseudo-types](https://secure.php.net/manual/en/language.pseudo-types.php "php pseudo-types")
+2. [xdebug](https://xdebug.org/docs "xdebug")
+3. [xdebug原理](https://laravel-china.org/articles/4090/the-first-step-to-becoming-a-senior-php-programmer-debugging-xdebug-principle "为高级 PHP 程序员的第一步——调试（xdebug 原理篇")
+
