edited today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -70,4 +70,5 @@
 1. [pseudo-types](https://secure.php.net/manual/en/language.pseudo-types.php "php pseudo-types")
 2. [xdebug](https://xdebug.org/docs "xdebug")
 3. [xdebug原理](https://laravel-china.org/articles/4090/the-first-step-to-becoming-a-senior-php-programmer-debugging-xdebug-principle "为高级 PHP 程序员的第一步——调试（xdebug 原理篇")
+4. [PHPstrom + xdebug](https://www.cnblogs.com/jsn521/p/3399997.html "PHPSTROM + xdebug")
 
