添加今日笔记 and xdebug

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -72,3 +72,6 @@
 3. [xdebug原理](https://laravel-china.org/articles/4090/the-first-step-to-becoming-a-senior-php-programmer-debugging-xdebug-principle "为高级 PHP 程序员的第一步——调试（xdebug 原理篇")
 4. [PHPstrom + xdebug](https://www.cnblogs.com/jsn521/p/3399997.html "PHPSTROM + xdebug")
 
+#2017103 
+1.[使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能](http://www.jianshu.com/p/8fb9ad0719c2 "使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能")
+
