添加今日笔记

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -74,4 +74,10 @@
 
 #2017103 
 1.[使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能](http://www.jianshu.com/p/8fb9ad0719c2 "使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能")
+2. [入门Webpack，看这篇就够了](http://www.jianshu.com/p/42e11515c10f "入门Webpack，看这篇就够了")
+3. [amd规范](https://github.com/amdjs/amdjs-api/wiki/AMD "amdjs")
+4. [cmd规范](https://github.com/seajs/seajs/issues/242 "seajs")
+5. [webpack](https://webpack.js.org/ "webpack")
+6. [sass](http://sass-lang.com/ "sass")
+7. [composer原理](https://laravel-china.org/topics/1002/deep-composer-autoload "composer autoloader 原理")
 
