add today notes‘

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -81,3 +81,7 @@
 6. [sass](http://sass-lang.com/ "sass")
 7. [composer原理](https://laravel-china.org/topics/1002/deep-composer-autoload "composer autoloader 原理")
 
+
+#20171014
+1. [graphql](http://graphql.org/)
+
