add today notee

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -72,7 +72,7 @@
 3. [xdebug原理](https://laravel-china.org/articles/4090/the-first-step-to-becoming-a-senior-php-programmer-debugging-xdebug-principle "为高级 PHP 程序员的第一步——调试（xdebug 原理篇")
 4. [PHPstrom + xdebug](https://www.cnblogs.com/jsn521/p/3399997.html "PHPSTROM + xdebug")
 
-#2017103 
+#20171013 
 1.[使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能](http://www.jianshu.com/p/8fb9ad0719c2 "使用PHPStorm + Xdebug + Firefox 单步调试PHP并分析代码性能")
 2. [入门Webpack，看这篇就够了](http://www.jianshu.com/p/42e11515c10f "入门Webpack，看这篇就够了")
 3. [amd规范](https://github.com/amdjs/amdjs-api/wiki/AMD "amdjs")
@@ -81,3 +81,8 @@
 6. [sass](http://sass-lang.com/ "sass")
 7. [composer原理](https://laravel-china.org/topics/1002/deep-composer-autoload "composer autoloader 原理")
 
+# 20171017 
+1. [引用传递](https://secure.php.net/manual/zh/language.references.pass.php "引用传递")
+2. [返回引用](https://secure.php.net/manual/zh/language.references.return.php "返回引用")
+3. [回调类型](https://secure.php.net/manual/zh/language.types.callable.php "回调类型")
+4. [匿名函数](https://secure.php.net/manual/en/functions.anonymous.php '匿名函数')
