--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -82,7 +82,7 @@
 7. [composer原理](https://laravel-china.org/topics/1002/deep-composer-autoload "composer autoloader 原理")
 
 
-#20171014
+# 20171014
 1. [graphql](http://graphql.org/)
 2. [oauth](https://oauth.net/2/ "oauth2")
 
@@ -90,7 +90,10 @@
 1. [引用传递](https://secure.php.net/manual/zh/language.references.pass.php "引用传递")
 2. [返回引用](https://secure.php.net/manual/zh/language.references.return.php "返回引用")
 3. [回调类型](https://secure.php.net/manual/zh/language.types.callable.php "回调类型")
-4. [匿名函数](https://secure.php.net/manual/en/functions.anonymous.php '匿名函数')
+4. [匿名函数](https://secure.php.net/manual/en/functions.anonymous.php "匿名函数")
+5. [生成器](https://secure.php.net/manual/zh/language.generators.php "生成器")
+6. [引用解释](https://secure.php.net/manual/zh/language.references.pass.php "引用解释")
+7. [后期静态绑定](https://secure.php.net/manual/zh/language.oop5.late-static-bindings.php "后期静态绑定")
 
 
 
