--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -96,4 +96,10 @@
 7. [后期静态绑定](https://secure.php.net/manual/zh/language.oop5.late-static-bindings.php "后期静态绑定")
 
 
+# 20171019 
+
+1. [??](https://wiki.php.net/rfc/isset_ternary "null合并运算符")
+2. [PHP7 新特性](https://secure.php.net/manual/zh/migration70.new-features.php "PHP7 新特性，这是一个语法糖")
+
+
 
