add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -101,5 +101,9 @@
 1. [??](https://wiki.php.net/rfc/isset_ternary "null合并运算符")
 2. [PHP7 新特性](https://secure.php.net/manual/zh/migration70.new-features.php "PHP7 新特性，这是一个语法糖")
 
+#20171020
+1. [pinning certificate](https://security.stackexchange.com/questions/29988/what-is-certificate-pinning "pinning certificate")
+2. [promise+](https://promisesaplus.com/ "promise+")
+
 
 
