--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -105,5 +105,13 @@
 1. [pinning certificate](https://security.stackexchange.com/questions/29988/what-is-certificate-pinning "pinning certificate")
 2. [promise+](https://promisesaplus.com/ "promise+")
 
+# 20171023
+
+1. [如何学好C语言](https://coolshell.cn/articles/4102.html "如何学好C语言")
+2. [面向对象是个骗局](http://wiki.c2.com/?ObjectOrientationIsaHoax "objectorientationisahoax")
+3. [awk 手册](https://www.gnu.org/software/gawk/manual/gawk.html "awk" 手册)
+4. [箭头函数重构](https://coolshell.cn/articles/17757.html "箭头函数重构方式")
+5. [marticl flower refactor](https://refactoring.com/catalog/replaceNestedConditionalWithGuardClauses.html guardClauses)
+6. 
 
 
