--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -113,5 +113,8 @@
 4. [箭头函数重构](https://coolshell.cn/articles/17757.html "箭头函数重构方式")
 5. [marticl flower refactor](https://refactoring.com/catalog/replaceNestedConditionalWithGuardClauses.html guardClauses)
 
+#20171024
+
+1. [dbgp协议](https://xdebug.org/docs-dbgp.php "dbgp协议")
 
 
