--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -113,8 +113,13 @@
 4. [箭头函数重构](https://coolshell.cn/articles/17757.html "箭头函数重构方式")
 5. [marticl flower refactor](https://refactoring.com/catalog/replaceNestedConditionalWithGuardClauses.html guardClauses)
 
-#20171024
+# 20171024
 
 1. [dbgp协议](https://xdebug.org/docs-dbgp.php "dbgp协议")
+
+# 20171025 
+1. [JavaScript有限状态机](http://www.ruanyifeng.com/blog/2013/09/finite-state_machine_for_javascript.html "JavaScript有限状态机")
+2. [PHP SPL](http://www.ruanyifeng.com/blog/2008/07/php_spl_notes.html "SPL")
+3. [免费的压力测试工具](https://coolshell.cn/articles/2589.html "免费的压力测试工具")
 
 
