edited toady notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -121,5 +121,10 @@
 1. [JavaScript有限状态机](http://www.ruanyifeng.com/blog/2013/09/finite-state_machine_for_javascript.html "JavaScript有限状态机")
 2. [PHP SPL](http://www.ruanyifeng.com/blog/2008/07/php_spl_notes.html "SPL")
 3. [免费的压力测试工具](https://coolshell.cn/articles/2589.html "免费的压力测试工具")
+4. [JavaScript Module Pattern In Depth](http://www.adequatelygood.com/JavaScript-Module-Pattern-In-Depth.html "JavaScript Module Pattern In Depth")
+5. [AMD教程](http://www.ruanyifeng.com/blog/2012/10/asynchronous_module_definition.html "AMD教程")
+6. [精读前后端渲染](https://github.com/camsong/blog/issues/8 "精读前后端渲染")
+7. [mock object](https://en.wikipedia.org/wiki/Mock_object "mock object")
+8. [npm docs](https://docs.npmjs.com/ "npm docs")
 
 
