add toady notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -127,4 +127,10 @@
 7. [mock object](https://en.wikipedia.org/wiki/Mock_object "mock object")
 8. [npm docs](https://docs.npmjs.com/ "npm docs")
 
+# 20171026
+
+1. [RESTful API 设计指南](http://www.ruanyifeng.com/blog/2014/05/restful_api.html "RESTful API 设计指南")
+2. [HTTPS协议](http://www.ruanyifeng.com/blog/2014/02/ssl_tls.html "HTTPS协议")
+3. [理解RESTFUL](http://www.ruanyifeng.com/blog/2011/09/restful.html "理解RESTFUL")
+
 
