edited today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -132,5 +132,11 @@
 1. [RESTful API 设计指南](http://www.ruanyifeng.com/blog/2014/05/restful_api.html "RESTful API 设计指南")
 2. [HTTPS协议](http://www.ruanyifeng.com/blog/2014/02/ssl_tls.html "HTTPS协议")
 3. [理解RESTFUL](http://www.ruanyifeng.com/blog/2011/09/restful.html "理解RESTFUL")
+4. [使用 AMD、CommonJS 及 ES Harmony 编写模块化的 JavaScript](https://justineo.github.io/singles/writing-modular-js/ "使用 AMD、CommonJS 及 ES Harmony 编写模块化的 JavaScript")
+5. [What is an asynchronous loader?](http://unscriptable.com/2011/03/30/curl-js-yet-another-amd-loader/ "What is an asynchronous loader?")
+6. [github API](github API "https://developer.github.com/")
+7. [paypal API](https://developer.paypal.com/ "paypal API")
+8. [ebay API](https://developer.ebay.com/api-docs/static/ebay-rest-landing.html "ebay API")
+9. [ebay restufl API](https://developer.paypal.com/docs/api/ "ebay API")
 
 
