add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -140,4 +140,11 @@
 9. [ebay restufl API](https://developer.paypal.com/docs/api/ "ebay API")
 10.[oauth2-server](https://alexbilbie.com/ "oauth2-server")
 
+# 20171027
+
+1. [从零开始搭建一个HTTPS网站](http://cjting.me/web2.0/build-a-https-site-from-scratch/ "从零开始搭建一个HTTPS网站")
+2. [Strong Ciphers for Apache, nginx and Lighttpd](https://cipherli.st/ "Strong Ciphers for Apache, nginx and Lighttpd")
+3. [oauth2 workflow](https://requests-oauthlib.readthedocs.io/en/latest/oauth2_workflow.html "oauth2 workflow")
+4. []()
+
 
