edite today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -145,6 +145,6 @@
 1. [从零开始搭建一个HTTPS网站](http://cjting.me/web2.0/build-a-https-site-from-scratch/ "从零开始搭建一个HTTPS网站")
 2. [Strong Ciphers for Apache, nginx and Lighttpd](https://cipherli.st/ "Strong Ciphers for Apache, nginx and Lighttpd")
 3. [oauth2 workflow](https://requests-oauthlib.readthedocs.io/en/latest/oauth2_workflow.html "oauth2 workflow")
-4. []()
+4. [GUID:the guid generator](http://guid.us/GUID/PHP "GUID:the guid generator")
 
 
