add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -147,4 +147,10 @@
 3. [oauth2 workflow](https://requests-oauthlib.readthedocs.io/en/latest/oauth2_workflow.html "oauth2 workflow")
 4. [GUID:the guid generator](http://guid.us/GUID/PHP "GUID:the guid generator")
 
+# 20171028
+
+1. [HTTP API与SOAP API的区别](https://docs.awspaas.com/reference-guide/aws-paas-api-guide/appendix/http_vs_soap.html "HTTP API与SOAP API的区别")
+2. [Web Services Description Language](https://www.w3.org/TR/wsdl "Web Services Description Language")
+3. [Extensible Markup Language (XML) 1.0 (Fifth Edition)](https://www.w3.org/TR/REC-xml/ "Extensible Markup Language (XML) 1.0 (Fifth Edition)")
+
 
