--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -153,4 +153,8 @@
 2. [Web Services Description Language](https://www.w3.org/TR/wsdl "Web Services Description Language")
 3. [Extensible Markup Language (XML) 1.0 (Fifth Edition)](https://www.w3.org/TR/REC-xml/ "Extensible Markup Language (XML) 1.0 (Fifth Edition)")
 
+# 20171029
+
+1. [三种 PHP 运行环境的性能对比](https://www.qcloud.com/community/article/385799001490608925 "三种 PHP 运行环境的性能对比")
+2. [swoole入门教程](https://www.gitbook.com/book/linkeddestiny/easy-swoole/details "swoole入门教程")
 
