add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -158,3 +158,8 @@
 1. [三种 PHP 运行环境的性能对比](https://www.qcloud.com/community/article/385799001490608925 "三种 PHP 运行环境的性能对比")
 2. [swoole入门教程](https://www.gitbook.com/book/linkeddestiny/easy-swoole/details "swoole入门教程")
 3. [filesystem](http://flysystem.thephpleague.com/ "thephpleague-filesystem")
+
+# 20171030
+
+1. 查看CG框架源码，发现了自动路由方法，正在研究
+2. 实践JWT，实现两个网站间的权限共享。
