add openssh config

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -163,3 +163,5 @@
 
 1. 查看CG框架源码，发现了自动路由方法，正在研究
 2. 实践JWT，实现两个网站间的权限共享。
+3. [利用SSH的用户配置文件Config管理SSH会话](https://www.hi-linux.com/posts/14346.html "利用SSH的用户配置文件Config管理SSH会话")
+4. [openssh配置文件](https://man.openbsd.org/ssh_config.5 "ssh_config")
