add toady notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -165,3 +165,8 @@
 2. 实践JWT，实现两个网站间的权限共享。
 3. [利用SSH的用户配置文件Config管理SSH会话](https://www.hi-linux.com/posts/14346.html "利用SSH的用户配置文件Config管理SSH会话")
 4. [openssh配置文件](https://man.openbsd.org/ssh_config.5 "ssh_config")
+
+# 20171031
+1. [HTTP-请求、响应、缓存](https://cnbin.github.io/blog/2016/02/20/http-qing-qiu-,-xiang-ying-,-huan-cun/ "HTTP-请求、响应、缓存")
+2. [OAuth 2.0 and the Road to Hell](https://hueniverse.com/oauth-2-0-and-the-road-to-hell-8eec45921529 "OAuth 2.0 and the Road to Hell")
+3. [Algorithm 系列](http://blog.csdn.net/v_july_v "Algorithm系列教程")
