edited today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -171,3 +171,10 @@
 2. [OAuth 2.0 and the Road to Hell](https://hueniverse.com/oauth-2-0-and-the-road-to-hell-8eec45921529 "OAuth 2.0 and the Road to Hell")
 3. [Algorithm 系列](http://blog.csdn.net/v_july_v "Algorithm系列教程")
 4. [littme](http://litten.me/2017/02/19/diary-2017-0212-0218/ "前端样式")
+
+# 20171101
+
+1. [What do the different flowchart shapes mean?](https://www.rff.com/flowchart_shapes.php "What do the different flowchart shapes mean?")
+2. [Flowchart](https://en.wikipedia.org/wiki/Flowchart "Flowchart")
+3. [monolog](https://seld.be/ "monolog作者的博客")
+4. [The Syslog Protocol](https://tools.ietf.org/html/rfc5424 "The Syslog Protocol")
