--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -178,3 +178,5 @@
 2. [Flowchart](https://en.wikipedia.org/wiki/Flowchart "Flowchart")
 3. [monolog](https://seld.be/ "monolog作者的博客")
 4. [The Syslog Protocol](https://tools.ietf.org/html/rfc5424 "The Syslog Protocol")
+5. [git commit message type](https://karma-runner.github.io/1.0/dev/git-commit-msg.html "git commit message type")
+6. [How to write a git commit message](https://chris.beams.io/posts/git-commit/ "How to write a commit message")
