--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -180,3 +180,7 @@
 4. [The Syslog Protocol](https://tools.ietf.org/html/rfc5424 "The Syslog Protocol")
 5. [git commit message type](https://karma-runner.github.io/1.0/dev/git-commit-msg.html "git commit message type")
 6. [How to write a git commit message](https://chris.beams.io/posts/git-commit/ "How to write a commit message")
+
+# 20171102
+
+1. [JSON Schema](http://json-schema.org/ "JSON Schema")
