docs:add 20171103 notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -184,3 +184,16 @@
 # 20171102
 
 1. [JSON Schema](http://json-schema.org/ "JSON Schema")
+
+# 20171103
+
+1. [Inversion of Control Containers and the Dependency Injection pattern](https://martinfowler.com/articles/injection.html "Inversion of Control Containers and the Dependency Injection pattern")
+2. [IoC容器和Dependency Injection模式](http://insights.thoughtworkers.org/injection/ "IoC容器和Dependency Injection模式")
+3. [phalcon](https://phalconphp.com/en/ "phalcon")
+4. [PDO vs. MySQLi: Which Should You Use?](https://code.tutsplus.com/tutorials/pdo-vs-mysqli-which-should-you-use--net-24059 "PDO vs. MySQLi: Which Should You Use?")
+5. [addslashes() Versus mysql_real_escape_string()](http://shiflett.org/blog/2006/jan/addslashes-versus-mysql-real-escape-string "addslashes() Versus mysql_real_escape_string()")
+6. [rfc-editor](https://www.rfc-editor.org/current_queue.php "rfc-editor")
+7. [Things You Should Never Do, Part I](https://www.joelonsoftware.com/2000/04/06/things-you-should-never-do-part-i/ "Things You Should Never Do, Part I")
+8. [PHP internal](https://wiki.php.net/internals/references "PHP internal")
+9. [nikic blog](https://nikic.github.io/ "nikic blog")
+10. [The-HipHop-compiler-for-PHP](http://dl.acm.org/citation.cfm?id=2384658 "The-HipHop-compiler-for-PHP")
