--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -197,3 +197,8 @@
 8. [PHP internal](https://wiki.php.net/internals/references "PHP internal")
 9. [nikic blog](https://nikic.github.io/ "nikic blog")
 10. [The-HipHop-compiler-for-PHP](http://dl.acm.org/citation.cfm?id=2384658 "The-HipHop-compiler-for-PHP")
+11. [鸟哥的博客](http://www.laruence.com "鸟哥的博客")
+12. [lazy load](https://www.martinfowler.com/eaaCatalog/lazyLoad.html "lazy load")
+13. [Practical PHP Patterns: Lazy Loading](https://dzone.com/articles/practical-php-patterns/practical-php-patterns-lazy "Practical PHP Patterns: Lazy Loading" )
+14. [Understanding Lazy Loading , Eager Loading and Explicit Loading with Entity Framework Implementation](http://techblog.treenodes.com/index.php/2012/06/26/understanding-lazy-loading-eager-loading-and-explicit-loading-with-entity-framework-implementation/ "Understanding Lazy Loading , Eager Loading and Explicit Loading with Entity Framework Implementation")
+15. [ProxyManager by ocrmaius](https://ocramius.github.io/ProxyManager/docs/lazy-loading-value-holder.html "ProxyManager by ocrmaius")
