docs:add Ioc and DI content

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -202,3 +202,21 @@
 13. [Practical PHP Patterns: Lazy Loading](https://dzone.com/articles/practical-php-patterns/practical-php-patterns-lazy "Practical PHP Patterns: Lazy Loading" )
 14. [Understanding Lazy Loading , Eager Loading and Explicit Loading with Entity Framework Implementation](http://techblog.treenodes.com/index.php/2012/06/26/understanding-lazy-loading-eager-loading-and-explicit-loading-with-entity-framework-implementation/ "Understanding Lazy Loading , Eager Loading and Explicit Loading with Entity Framework Implementation")
 15. [ProxyManager by ocrmaius](https://ocramius.github.io/ProxyManager/docs/lazy-loading-value-holder.html "ProxyManager by ocrmaius")
+
+
+# 20171106 
+
+1. [PSR-HTTP-Message](http://www.php-fig.org/psr/psr-7/ "PSR-HTTP-Message")
+2. [Hypertext Transfer Protocol (HTTP/1.1): Message Syntax and Routing](https://tools.ietf.org/html/rfc7230 "Message Syntax and Routing")
+3. [Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content](https://tools.ietf.org/html/rfc7231 "Hypertext Transfer Protocol:Semantics and Content")
+4. [Uniform Resource Identifier (URI): Generic Syntax](https://tools.ietf.org/html/rfc3986 "Uniform Resource Identifier (URI): Generic Syntax")
+5. [status code](https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html "status code")
+6. [依赖注入详解](https://laravel-china.org/topics/2104/understanding-dependency-injection-and-inversion-of-control "依赖注入详解")
+7. [Dependency Injection 和 Service Locator](https://huoding.com/2015/11/11/482 "Dependency Injection 和 Service Locator")
+8. [DIC vs. Service Locator](https://www.littlehart.net/atthekeyboard/2012/06/06/dic-vs-service-locator/ "DIC vs. Service Locator")
+9. [laravel 学习笔记 —— 神奇的服务容器](https://www.insp.top/article/learn-laravel-container "laravel 学习笔记 —— 神奇的服务容器")
+10. [the creator of symfony](http://fabien.potencier.org/ "the creator of symfony")
+11. [paul-m-jones.com](http://paul-m-jones.com/ "paul-m-jones.com")
+12. [How Laravel Facades Work and How to Use Them Elsewhere](https://www.sitepoint.com/how-laravel-facades-work-and-how-to-use-them-elsewhere/ "How Laravel Facades Work and How to Use Them Elsewhere")
+13. [stop using facades](http://programmingarehard.com/2014/01/11/stop-using-facades.html/ "stop using facades")
+14. []()
