docs:edit today notes,go on do something about DI

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -219,4 +219,11 @@
 11. [paul-m-jones.com](http://paul-m-jones.com/ "paul-m-jones.com")
 12. [How Laravel Facades Work and How to Use Them Elsewhere](https://www.sitepoint.com/how-laravel-facades-work-and-how-to-use-them-elsewhere/ "How Laravel Facades Work and How to Use Them Elsewhere")
 13. [stop using facades](http://programmingarehard.com/2014/01/11/stop-using-facades.html/ "stop using facades")
-14. []()
+14. [深入理解YII2](http://www.digpage.com/di.html "深入理解YII2")
+
+# 20171107
+
+1. [DesignPatternsPHP](https://designpatternsphp.readthedocs.io/en/latest/"DesignPatternsPHP")
+2. [readthedocs](https://readthedocs.org "readthedocs很多开源文档")
+3. [  Multipurpose Internet Mail Extensions(MIME) Part Two:Media Types](https://tools.ietf.org/html/rfc2046 "Media Types")
+4. [Form-based File Upload in HTML](https://tools.ietf.org/html/rfc1867 "Form-based File Upload in HTML")
