docs:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -229,5 +229,6 @@
 4. [Form-based File Upload in HTML](https://tools.ietf.org/html/rfc1867 "Form-based File Upload in HTML")
 
 # 20171108
-1. []()
-2. []()
+1. [Middleware的详解](https://en.wikipedia.org/wiki/Middleware "Middleware")
+2. [peer-to-peer](https://en.wikipedia.org/wiki/Peer-to-peer "peer-to-peer")
+3. [doctrine orm document](http://docs.doctrine-project.org/projects/doctrine-orm/en/latest/tutorials/getting-started.html "doctrine orm document")
