docs:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -232,3 +232,9 @@
 1. [Middleware的详解](https://en.wikipedia.org/wiki/Middleware "Middleware")
 2. [peer-to-peer](https://en.wikipedia.org/wiki/Peer-to-peer "peer-to-peer")
 3. [doctrine orm document](http://docs.doctrine-project.org/projects/doctrine-orm/en/latest/tutorials/getting-started.html "doctrine orm document")
+
+# 20171109
+1. [tastphp的商店](https://www.clothesmake.com.cn/ "使用tastphp")
+2. [tastphp](https://github.com/tastphp/tastphp/blob/master/README-CN.md "tastphp")
+3. [Output Buffering for Web Developers, a Beginner’s Guide](https://web.archive.org/web/20101216035343/http://dev-tips.com/featured/output-buffering-for-web-developers-a-beginners-guide "Output Buffering for Web Developers, a Beginner’s Guide")
+4. [memory limit](https://secure.php.net/manual/en/ini.core.php#ini.memory-limit "memory limit")
