docs:add toady notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -238,3 +238,9 @@
 2. [tastphp](https://github.com/tastphp/tastphp/blob/master/README-CN.md "tastphp")
 3. [Output Buffering for Web Developers, a Beginner’s Guide](https://web.archive.org/web/20101216035343/http://dev-tips.com/featured/output-buffering-for-web-developers-a-beginners-guide "Output Buffering for Web Developers, a Beginner’s Guide")
 4. [memory limit](https://secure.php.net/manual/en/ini.core.php#ini.memory-limit "memory limit")
+
+# 10171110
+1. [Dependency injection](https://en.wikipedia.org/wiki/Dependency_injection#Intent "Dependency injection")
+2. [An Extension to HTTP : Digest Access Authentication](https://www.ietf.org/rfc/rfc2069.txt "An Extension to HTTP : Digest Access Authentication")
+3. [HTTP Authentication: Basic and Digest Access Authentication](https://tools.ietf.org/html/rfc2617 "HTTP Authentication: Basic and Digest Access Authentication")
+4. [token bucket](https://en.wikipedia.org/wiki/Token_bucket "token bucket")
