--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -239,8 +239,15 @@
 3. [Output Buffering for Web Developers, a Beginner’s Guide](https://web.archive.org/web/20101216035343/http://dev-tips.com/featured/output-buffering-for-web-developers-a-beginners-guide "Output Buffering for Web Developers, a Beginner’s Guide")
 4. [memory limit](https://secure.php.net/manual/en/ini.core.php#ini.memory-limit "memory limit")
 
-# 10171110
+# 20171110
 1. [Dependency injection](https://en.wikipedia.org/wiki/Dependency_injection#Intent "Dependency injection")
 2. [An Extension to HTTP : Digest Access Authentication](https://www.ietf.org/rfc/rfc2069.txt "An Extension to HTTP : Digest Access Authentication")
 3. [HTTP Authentication: Basic and Digest Access Authentication](https://tools.ietf.org/html/rfc2617 "HTTP Authentication: Basic and Digest Access Authentication")
 4. [token bucket](https://en.wikipedia.org/wiki/Token_bucket "token bucket")
+
+
+# 20171113
+
+1. [GuzzleHttp](https://juejin.im/entry/596ad07df265da6c30654675 "GuzzlePHP详解")
+2. [Understanding Streams in PHP](https://www.sitepoint.com/%EF%BB%BFunderstanding-streams-in-php/ "Understanding Streams in PHP")
+3. [php-http/httplug](http://docs.php-http.org/en/latest/httplug/introduction.html "php-http/httplug a http-client")
