add stream manual and php wrapper

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -251,3 +251,9 @@
 1. [GuzzleHttp](https://juejin.im/entry/596ad07df265da6c30654675 "GuzzlePHP详解")
 2. [Understanding Streams in PHP](https://www.sitepoint.com/%EF%BB%BFunderstanding-streams-in-php/ "Understanding Streams in PHP")
 3. [php-http/httplug](http://docs.php-http.org/en/latest/httplug/introduction.html "php-http/httplug a http-client")
+
+
+
+# 1071114 
+1. [wrapper][https://secure.php.net/manual/en/wrappers.php.php "wrapper"]
+2. [Stream](https://secure.php.net/manual/en/book.stream.php "Stream")
