chore:add promise in php

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -257,3 +257,9 @@
 # 1071114 
 1. [wrapper][https://secure.php.net/manual/en/wrappers.php.php "wrapper"]
 2. [Stream](https://secure.php.net/manual/en/book.stream.php "Stream")
+3. [2017 native-vs-hybrid-apps](https://blog.techmagic.co/native-vs-hybrid-apps/ "2017 native-vs-hybrid-apps")
+4. [music player based on Laravel Framework](https://github.com/phanan/koel "a music player based on Laravel Framework")
+5. [Are the PUT, DELETE, HEAD, etc methods available in most web browsers?](https://stackoverflow.com/questions/165779/are-the-put-delete-head-etc-methods-available-in-most-web-browsers "Are the PUT, DELETE, HEAD, etc methods available in most web browsers?")
+6. [深入理解Promise](Are the PUT, DELETE, HEAD, etc methods available in most web browsers? "深入理解Promise")
+7. [Promises/A+](https://promisesaplus.com/ "Promises/A+")
+8. []()
