--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -266,3 +266,7 @@
 # 20171116
 1. [order by rand](https://jan.kneschke.de/projects/mysql/order-by-rand/ "order by rand")
 
+# 10171117
+1. [soimort](https://www.soimort.org/ "soimort")
+2. [Yii2](http://www.yiichina.com/ "Yii2")
+
