chore:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -273,3 +273,9 @@
 
 # 20171120
 1. [kotlin in chinese](https://huanglizhuo.gitbooks.io/kotlin-in-chinese/content/ClassesAndObjects/Visibility-Modifiers.html "kotlin")
+
+# 20171022
+
+1. [Synchronizing A MySQL Database with Git and Git Hooks](https://ben.kulbertis.org/2011/10/synchronizing-a-mysql-database-with-git-and-git-hooks/ "Synchronizing A MySQL Database with Git and Git Hooks")
+
+3.[Backup your Database in Git](https://www.viget.com/articles/backup-your-database-in-git/ "Backup your Database in Git")
