chore:add toady notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -278,4 +278,8 @@
 
 1. [Synchronizing A MySQL Database with Git and Git Hooks](https://ben.kulbertis.org/2011/10/synchronizing-a-mysql-database-with-git-and-git-hooks/ "Synchronizing A MySQL Database with Git and Git Hooks")
 
-3.[Backup your Database in Git](https://www.viget.com/articles/backup-your-database-in-git/ "Backup your Database in Git")
+2.[Backup your Database in Git](https://www.viget.com/articles/backup-your-database-in-git/ "Backup your Database in Git")
+
+
+# 20171023
+1. [Linus Torvarlds:Do no Harm](https://lkml.org/ "Don No harm")
