--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -274,12 +274,15 @@
 # 20171120
 1. [kotlin in chinese](https://huanglizhuo.gitbooks.io/kotlin-in-chinese/content/ClassesAndObjects/Visibility-Modifiers.html "kotlin")
 
-# 20171022
+# 20171122
 
 1. [Synchronizing A MySQL Database with Git and Git Hooks](https://ben.kulbertis.org/2011/10/synchronizing-a-mysql-database-with-git-and-git-hooks/ "Synchronizing A MySQL Database with Git and Git Hooks")
 
 2.[Backup your Database in Git](https://www.viget.com/articles/backup-your-database-in-git/ "Backup your Database in Git")
 
 
-# 20171023
+# 20171123
 1. [Linus Torvarlds:Do no Harm](https://lkml.org/ "Don No harm")
+
+# 20171124
+1. [codeproject](https://www.codeproject.com/ "codeproject")
