chore:add yahoo best practices for speeding up your web site

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -286,3 +286,5 @@
 
 # 20171124
 1. [codeproject](https://www.codeproject.com/ "codeproject")
+2. [JSON parser written in C](https://github.com/stedolan/jq "JSON parser written in C")
+3. [Best Practices for Speeding Up Your Web Site](https://developer.yahoo.com/performance/rules.html "Best Practices for Speeding Up Your Web Site")
