chore:add javascript文件加载位置

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -288,3 +288,4 @@
 1. [codeproject](https://www.codeproject.com/ "codeproject")
 2. [JSON parser written in C](https://github.com/stedolan/jq "JSON parser written in C")
 3. [Best Practices for Speeding Up Your Web Site](https://developer.yahoo.com/performance/rules.html "Best Practices for Speeding Up Your Web Site")
+4. [Javascript文件位置](http://blog.csdn.net/xuemin963169998/article/details/70229341 "Javascript位置")
