--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -289,3 +289,7 @@
 2. [JSON parser written in C](https://github.com/stedolan/jq "JSON parser written in C")
 3. [Best Practices for Speeding Up Your Web Site](https://developer.yahoo.com/performance/rules.html "Best Practices for Speeding Up Your Web Site")
 4. [Javascript文件位置](http://blog.csdn.net/xuemin963169998/article/details/70229341 "Javascript位置")
+
+# 20171125
+
+1. [sdn](https://www.opennetworking.org "SDN")
