chore:add today notebooks

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -289,3 +289,8 @@
 2. [JSON parser written in C](https://github.com/stedolan/jq "JSON parser written in C")
 3. [Best Practices for Speeding Up Your Web Site](https://developer.yahoo.com/performance/rules.html "Best Practices for Speeding Up Your Web Site")
 4. [Javascript文件位置](http://blog.csdn.net/xuemin963169998/article/details/70229341 "Javascript位置")
+
+#20171129
+1. [writethedocs](http://www.writethedocs.org/ "writethedocs")
+2. [韩天峰的博客](http://rango.swoole.com "韩天峰的博客")
+3. [网络编程](http://www.cppblog.com/Solstice/archive/2011/06/06/148129.aspx "网络编程")
