chore:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -298,3 +298,7 @@
 1. [writethedocs](http://www.writethedocs.org/ "writethedocs")
 2. [韩天峰的博客](http://rango.swoole.com "韩天峰的博客")
 3. [网络编程](http://www.cppblog.com/Solstice/archive/2011/06/06/148129.aspx "网络编程")
+
+# 20171201
+
+1.[Python uwsgi Nginx](https://uwsgi-docs.readthedocs.io/en/latest/Nginx.html "uwsgi 配置")
