chore:add python resources

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -302,3 +302,5 @@
 # 20171201
 
 1.[Python uwsgi Nginx](https://uwsgi-docs.readthedocs.io/en/latest/Nginx.html "uwsgi 配置")
+2.[Python Flask](http://flask.pocoo.org/docs/0.12/ "Python Flask")
+3.[Python3 docs](https://docs.python.org/3/index.html "Python3 docs")
