““chore:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -301,6 +301,9 @@
 
 # 20171201
 
-1.[Python uwsgi Nginx](https://uwsgi-docs.readthedocs.io/en/latest/Nginx.html "uwsgi 配置")
-2.[Python Flask](http://flask.pocoo.org/docs/0.12/ "Python Flask")
-3.[Python3 docs](https://docs.python.org/3/index.html "Python3 docs")
+1. [Python uwsgi Nginx](https://uwsgi-docs.readthedocs.io/en/latest/Nginx.html "uwsgi 配置")
+2. [Python Flask](http://flask.pocoo.org/docs/0.12/ "Python Flask")
+3. [Python3 docs](https://docs.python.org/3/index.html "Python3 docs")
+4. [Django](https://www.djangoproject.com/ "Django")
+5. [Tornado](http://www.tornadoweb.org/en/stable/ "Tornado")
+6. [The Quixote Web Framework](http://quixote.ca/ "The Quixote Web Framework")
