docs:add guzzleHTTP crawler

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -307,3 +307,11 @@
 4. [Django](https://www.djangoproject.com/ "Django")
 5. [Tornado](http://www.tornadoweb.org/en/stable/ "Tornado")
 6. [The Quixote Web Framework](http://quixote.ca/ "The Quixote Web Framework")
+7. [ContinuousIntegrationCertification](https://martinfowler.com/bliki/ContinuousIntegrationCertification.html "ContinuousIntegrationCertification")
+
+
+BAIDUID=64CDA162295A76C31B5D86B4361BD60D:FG=1; 
+expires=Sat, 01-Dec-18 07:14:27 GMT; 
+max-age=31536000; path=/; 
+domain=.baidu.com; 
+version=1
