--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -309,9 +309,6 @@
 6. [The Quixote Web Framework](http://quixote.ca/ "The Quixote Web Framework")
 7. [ContinuousIntegrationCertification](https://martinfowler.com/bliki/ContinuousIntegrationCertification.html "ContinuousIntegrationCertification")
 
+# 20171204
+1. [zanphp](http://zanphpdoc.zanphp.io/introduction.html "zanPHP")
 
-BAIDUID=64CDA162295A76C31B5D86B4361BD60D:FG=1; 
-expires=Sat, 01-Dec-18 07:14:27 GMT; 
-max-age=31536000; path=/; 
-domain=.baidu.com; 
-version=1
