docs:add awesome-python

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -308,6 +308,7 @@
 5. [Tornado](http://www.tornadoweb.org/en/stable/ "Tornado")
 6. [The Quixote Web Framework](http://quixote.ca/ "The Quixote Web Framework")
 7. [ContinuousIntegrationCertification](https://martinfowler.com/bliki/ContinuousIntegrationCertification.html "ContinuousIntegrationCertification")
+8. [awesome-python](https://awesome-python.com/ "awesome-python")
 
 # 20171204
 1. [zanphp](http://zanphpdoc.zanphp.io/introduction.html "zanPHP")
