docs: add mnapoli's blog

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -312,4 +312,5 @@
 
 # 20171204
 1. [zanphp](http://zanphpdoc.zanphp.io/introduction.html "zanPHP")
+2. [mnapoli's blog](http://mnapoli.fr/organizing-code-into-domain-modules/ "mnapoli's blog")
 
