docs:comparision chartjs and highcharts

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -314,3 +314,6 @@
 1. [zanphp](http://zanphpdoc.zanphp.io/introduction.html "zanPHP")
 2. [mnapoli's blog](http://mnapoli.fr/organizing-code-into-domain-modules/ "mnapoli's blog")
 
+# 20171205
+1. [chart-js vs highcharts](https://www.slant.co/versus/10578/11579/~chart-js_vs_highcharts "chart-js_vs_highcharts")
+
