docs: continue's details in php

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -316,4 +316,6 @@
 
 # 20171205
 1. [chart-js vs highcharts](https://www.slant.co/versus/10578/11579/~chart-js_vs_highcharts "chart-js_vs_highcharts")
+2. [Parsing Set-Cookie Headers In PHP with Guzzle](https://maxchadwick.xyz/blog/parsing-set-cookie-headers-in-php-with-guzzle "Parsing Set-Cookie Headers In PHP with Guzzle")
+3. [continue numberic](https://stackoverflow.com/questions/26431066/continue-2-and-break-in-switch-statement/26431162#26431162 "continue numberic")
 
