--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -318,4 +318,5 @@
 1. [chart-js vs highcharts](https://www.slant.co/versus/10578/11579/~chart-js_vs_highcharts "chart-js_vs_highcharts")
 2. [Parsing Set-Cookie Headers In PHP with Guzzle](https://maxchadwick.xyz/blog/parsing-set-cookie-headers-in-php-with-guzzle "Parsing Set-Cookie Headers In PHP with Guzzle")
 3. [continue numberic](https://stackoverflow.com/questions/26431066/continue-2-and-break-in-switch-statement/26431162#26431162 "continue numberic")
+4. [301永久性重定向和302临时性重定向](http://www.cnblogs.com/ChandlerVer5/p/301_302_SEO.html "301永久性重定向和302临时性重定向")
 
