docs:GUI documents

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -321,3 +321,9 @@
 4. [301永久性重定向和302临时性重定向](http://www.cnblogs.com/ChandlerVer5/p/301_302_SEO.html "301永久性重定向和302临时性重定向")
 5. [模拟登陆中 302 重定向和 cookies 的一些困惑](https://www.v2ex.com/t/296195 "模拟登陆中 302 重定向和 cookies 的一些困惑")
 
+# 20171206
+1. [imagemagick](https://www.imagemagick.org/script/index.php "imagemagick")
+2. [GD2](https://libgd.github.io/ "GD2")
+3. [GTK](https://www.gtk.org/ "GTK")
+4. [cocos2d-x文档](http://www.cocos2d-x.org/docs/cocos2d-x/en/ "cocos2d-x文档")
+
