docs: add referrer policy

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -320,6 +320,7 @@
 3. [continue numberic](https://stackoverflow.com/questions/26431066/continue-2-and-break-in-switch-statement/26431162#26431162 "continue numberic")
 4. [301永久性重定向和302临时性重定向](http://www.cnblogs.com/ChandlerVer5/p/301_302_SEO.html "301永久性重定向和302临时性重定向")
 5. [模拟登陆中 302 重定向和 cookies 的一些困惑](https://www.v2ex.com/t/296195 "模拟登陆中 302 重定向和 cookies 的一些困惑")
+6. [Referrer策略与防盗链](https://blog.lyz810.com/article/2016/08/referrer-policy-and-anti-leech/ "Referrer策略与防盗链")
 
 # 20171206
 1. [imagemagick](https://www.imagemagick.org/script/index.php "imagemagick")
