”docs:polyfill meaning

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -331,3 +331,6 @@
 4. [cocos2d-x文档](http://www.cocos2d-x.org/docs/cocos2d-x/en/ "cocos2d-x文档")
 5. [cppreference](http://en.cppreference.com/w/ "cppreference")
 
+# 20171207
+1. [polyfill](https://remysharp.com/2010/10/08/what-is-a-polyfill "polyfill")
+
