docs:add python 数据分析

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -334,3 +334,11 @@
 # 20171207
 1. [polyfill](https://remysharp.com/2010/10/08/what-is-a-polyfill "polyfill")
 
+
+# 20171208
+
+1. [scrapy](https://scrapy.org/ "scrapy docment")
+2. [python-requests](http://docs.python-requests.org/en/master/ "python-reuqests")
+3. [nummy](https://www.scipy.org/scipylib/download.html "nummy")
+4. [Python Data Analysis Library](https://pandas.pydata.org/ "Python Data Analysis Library")
+
