docs:add today notes

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -341,4 +341,5 @@
 2. [python-requests](http://docs.python-requests.org/en/master/ "python-reuqests")
 3. [nummy](https://www.scipy.org/scipylib/download.html "nummy")
 4. [Python Data Analysis Library](https://pandas.pydata.org/ "Python Data Analysis Library")
+5. [web-font learning](https://codepen.io/ "web-font learning")
 
