docs: API principle

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -343,3 +343,8 @@
 4. [Python Data Analysis Library](https://pandas.pydata.org/ "Python Data Analysis Library")
 5. [web-font learning](https://codepen.io/ "web-font learning")
 
+
+# 20171212
+1. [API Design Principles](http://wiki.qt.io/API-Design-Principles "API Design Principles")
+2. [Little Manual of API Design (PDF)](http://www4.in.tum.de/~blanchet/api-design.pdf "Little Manual of API Design (PDF)")
+
