--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -347,4 +347,5 @@
 # 20171212
 1. [API Design Principles](http://wiki.qt.io/API-Design-Principles "API Design Principles")
 2. [Little Manual of API Design (PDF)](http://www4.in.tum.de/~blanchet/api-design.pdf "Little Manual of API Design (PDF)")
+3. [HTTP2](https://imququ.com/post/protocol-negotiation-in-http2.html "HTTP2")
 
