docs:add personal blog

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -348,4 +348,6 @@
 1. [API Design Principles](http://wiki.qt.io/API-Design-Principles "API Design Principles")
 2. [Little Manual of API Design (PDF)](http://www4.in.tum.de/~blanchet/api-design.pdf "Little Manual of API Design (PDF)")
 3. [HTTP2](https://imququ.com/post/protocol-negotiation-in-http2.html "HTTP2")
+4. [API 版本](http://www.infoq.com/cn/news/2017/09/How-versioning-API "API 版本")
+5. [用3D LUT滤镜我做了个在线专业电影级别照片调色工具](http://www.zhangxinxu.com "用3D LUT滤镜我做了个在线专业电影级别照片调色工具")
 
