--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -351,3 +351,5 @@
 4. [API 版本](http://www.infoq.com/cn/news/2017/09/How-versioning-API "API 版本")
 5. [用3D LUT滤镜我做了个在线专业电影级别照片调色工具](http://www.zhangxinxu.com "用3D LUT滤镜我做了个在线专业电影级别照片调色工具")
 
+# 20171213
+1. [Guzzle 源码分析](https://juejin.im/entry/59ed6285f265da4327176201 "Guzzle 源码分析")
