docs: 添加关于并发与并行的博客

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -353,3 +353,7 @@
 
 # 20171213
 1. [Guzzle 源码分析](https://juejin.im/entry/59ed6285f265da4327176201 "Guzzle 源码分析")
+2. [Joe Armstrong](https://joearms.github.io/ "Erlang之父")
+3. [还在疑惑并发和并行](https://laike9m.com/blog/huan-zai-yi-huo-bing-fa-he-bing-xing,61/ "还在疑惑并发和并行？")
+4. [Python的GIL是什么鬼，多线程性能究竟如何](http://cenalulu.github.io/python/gil-in-python/ "Python的GIL是什么鬼，多线程性能究竟如何")
+5. [Concurrency is not parallelism](https://blog.golang.org/concurrency-is-not-parallelism "Concurrency is not parallelism")
