docs:add the c standard library

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -352,8 +352,12 @@
 5. [用3D LUT滤镜我做了个在线专业电影级别照片调色工具](http://www.zhangxinxu.com "用3D LUT滤镜我做了个在线专业电影级别照片调色工具")
 
 # 20171213
-1. [Guzzle 源码分析](https://juejin.im/entry/59ed6285f265da4327176201 "Guzzle 源码分析")
+1. [Guzzle 源码分析](https://www.chengxiaobai.cn/record/guzzle-source-code-analysis.html "Guzzle 源码分析")
 2. [Joe Armstrong](https://joearms.github.io/ "Erlang之父")
 3. [还在疑惑并发和并行](https://laike9m.com/blog/huan-zai-yi-huo-bing-fa-he-bing-xing,61/ "还在疑惑并发和并行？")
 4. [Python的GIL是什么鬼，多线程性能究竟如何](http://cenalulu.github.io/python/gil-in-python/ "Python的GIL是什么鬼，多线程性能究竟如何")
 5. [Concurrency is not parallelism](https://blog.golang.org/concurrency-is-not-parallelism "Concurrency is not parallelism")
+
+# 20171214
+1. [The C standard libaray](https://www-s.acm.illinois.edu/webmonkeys/book/c_guide/index.html "The C standard libaray")
+2. [C Standard Library header files](http://en.cppreference.com/w/c/header "C Standard Library header files")
