chore:add orm,ar,dao

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -361,3 +361,7 @@
 # 20171214
 1. [The C standard libaray](https://www-s.acm.illinois.edu/webmonkeys/book/c_guide/index.html "The C standard libaray")
 2. [C Standard Library header files](http://en.cppreference.com/w/c/header "C Standard Library header files")
+
+
+# 20180109
+1.[浅谈model, orm, dao和active record的区别](https://www.jianshu.com/p/00a7ca8d6bea "浅谈model, orm, dao和active record的区别")
