--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -365,3 +365,14 @@
 
 # 20180109
 1.[浅谈model, orm, dao和active record的区别](https://www.jianshu.com/p/00a7ca8d6bea "浅谈model, orm, dao和active record的区别")
+# 20180119
+
+1. [GNUPG](https://www.gnupg.org/documentation/guides.html "GNUPG")
+2. [GNUPG入门](http://www.ruanyifeng.com/blog/2013/07/gpg.html "GPG入门教程")
+3. [dnsmasq](https://manpages.debian.org/stretch/dnsmasq-base/dnsmasq.8.en.html "dnsmasq")
+4. [	
+Install Dnsmasq which is the lightweight DNS forwarder and DHCP Server Software.](https://www.server-world.info/en/note?os=Debian_9&p=dnsmasq "
+Install Dnsmasq which is the lightweight DNS forwarder and DHCP Server Software.")
+5. [DNSMASQ-source](http://www.thekelleys.org.uk/dnsmasq/docs/dnsmasq-man.html "DNSMASQ")
+6. [HowTodnsmasq]( https://wiki.debian.org/HowTo/dnsmasq "HowTodnsmasq")
+7. [resolv.conf](https://manpages.debian.org/stretch/manpages/resolv.conf.5.en.html "resolv.conf")
